tests/type/errors/bad_subtract3.typedsol
2:24 error: Mismatched types for binary operator